test/langtools/tools/javac/SuperInit/SuperInitFails.out
SuperInitFails.java:56:9: compiler.err.cant.ref.before.ctor.called: hashCode()
SuperInitFails.java:61:9: compiler.err.cant.ref.before.ctor.called: this
SuperInitFails.java:66:9: compiler.err.cant.ref.before.ctor.called: super
SuperInitFails.java:71:23: compiler.err.cant.ref.before.ctor.called: this
SuperInitFails.java:76:23: compiler.err.cant.ref.before.ctor.called: super
SuperInitFails.java:93:9: compiler.err.cant.ref.before.ctor.called: this
SuperInitFails.java:98:33: compiler.err.cant.ref.before.ctor.called: this
SuperInitFails.java:103:14: compiler.err.cant.ref.before.ctor.called: this
SuperInitFails.java:107:20: compiler.err.not.encl.class: java.lang.Object
SuperInitFails.java:111:17: compiler.err.cant.ref.before.ctor.called: super
SuperInitFails.java:118:22: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:124:9: compiler.err.cant.ref.before.ctor.called: this
SuperInitFails.java:132:9: compiler.err.non.canonical.constructor.invoke.another.constructor: SuperInitFails.Record1
SuperInitFails.java:137:9: compiler.err.non.canonical.constructor.invoke.another.constructor: SuperInitFails.Record2
SuperInitFails.java:154:31: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:158:15: compiler.err.cant.ref.before.ctor.called: this
SuperInitFails.java:167:13: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:171:17: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:175:24: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:179:18: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:185:28: compiler.err.cant.ref.before.ctor.called: this
SuperInitFails.java:194:25: compiler.err.return.before.superclass.initialized
SuperInitFails.java:199:33: compiler.err.ctor.calls.not.allowed.here
SuperInitFails.java:204:29: compiler.err.redundant.superclass.init
SuperInitFails.java:32:13: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:36:14: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:40:14: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:44:13: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:48:33: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:52:32: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:82:18: compiler.err.ctor.calls.not.allowed.here
SuperInitFails.java:88:13: compiler.err.return.before.superclass.initialized
SuperInitFails.java:149:18: compiler.err.call.must.only.appear.in.ctor
33 errors
